# Update_Alma_Digital_Collections

./: .gitignore  AlmaCollectionManager_5.py  AlmaCollectionManager_6.py  README.md  config_sample.yml  dry_test.py  pyproject.toml
docs/: almaapitk-audit.md
